@@ -122,11 +122,12 @@ private:
   int *statnumhit;
   int *statnummiss;
   int *statnumentries;
+  int *d_deferred_inserts;
+  int *d_deferred_lookups;
 };
 
 inline int PacketCache::get(DNSPacket *p, DNSPacket *cached)
 {
-  extern StatBag S;
   if(!((d_hit+d_miss)%5000)) {
     cleanup();
   }
@@ -169,7 +170,7 @@ inline int PacketCache::get(DNSPacket *p, DNSPacket *cached)
   {
     TryReadLock l(&d_mut); // take a readlock here
     if(!l.gotIt()) {
-      S.inc("deferred-cache-lookup");
+      (*d_deferred_lookups)++;
       return 0;
     }
 
